...
                icon = {
                    Column(horizontalAlignment = Alignment.CenterHorizontally) {
                        EmojiIcon(iconResId = icon)
                        Spacer(modifier = Modifier.height(4.dp))
                        Text(
                            text = when(route) {
                                Routes.HOME -> "Home"
                                Routes.ACTIVITIES -> "Activities"
                                Routes.CLUBS -> "Clubs"
                                Routes.REWARDS -> "Rewards"
                                Routes.PROFILE -> "Profile"
                                else -> ""
                            },
...
